@@ -1,3 +1,7 @@
+  Juergen Stuber has added:
+  - Persistent memory
+  - writeShort method in Native
+  
 leJOS 1.0.4:
 ------------
 
